Fix video source in index.html

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ video {
 
   <!-- CORRIGIDO AQUI -->
   <video width="100%" controls>
-    <source src="gravacao.mp4" type="video/mp4">
+    <source src="video.mp4" type="video/mp4">
   </video>
 
   <p style="margin-top:15px; font-size:14px;">
@@ -283,4 +283,5 @@ atualizarContador();
 </script>
 
 </body>
+
 </html>
